spacing issue

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ td.right {
 
 td.def {
     width: 12cm;
-    padding: 20px 1px 1px 20px;
+    padding: 1px 1px 1px 20px;
     font: 12px Inter;
     text-align: justify;
 }
